# LucidAI

karina/web-etl/: pyproject.toml
karina/web-etl/data/raw/website-data/: dry_run_webpages.txt  website_data.json
karina/web-etl/data/raw/website-data/endpoint-content/: endpoint_fetch_report.txt  pages_endpoint_content.json  person_endpoint_content.json  posts_endpoint_content.json
karina/web-etl/data/raw/website-data/endpoint-metadata/: blocks_endpoint_metadata.json  font-families_endpoint_metadata.json  media_endpoint_metadata.json  menu-items_endpoint_metadata.json  navigation_endpoint_metadata.json  pages_endpoint_metadata.json  person_endpoint_metadata.json  posts_endpoint_metadata.json  resource_endpoint_metadata.json  template-parts_endpoint_metadata.json  templates_endpoint_metadata.json
karina/web-etl/data/raw/website-data/website-data-with-ids/: pages_data_with_ids.json  (+3 more)
karina/web-etl/data/staged/: document_chunks.jsonl  documents.jsonl  indexed_pages_endpoint_content_data.json  indexed_person_endpoint_content_data.json  indexed_posts_endpoint_content_data.json  indexed_resource_endpoint_content_data.json  website_data.json
karina/web-etl/src/wp_site_etl/: pipeline.py
karina/web-etl/src/wp_site_etl/core/: config.py  enums.py  model_client.py
karina/web-etl/src/wp_site_etl/extract/: fetch_endpoint_content.sh  fetch_endpoint_metadata.sh
karina/web-etl/src/wp_site_etl/load/: exporter.py  loader.py  prod_load.py  staging_load.py
karina/web-etl/src/wp_site_etl/transform/: sbhc_by_county_table_parser.py  vectorizer.py  wp_content_indexer.py
(+30 files in other folders)
